tests/pact/bad/bad-root-namespace-upgrade.repl
(begin-tx)
(module test-mgd-ns GOV
  (defcap GOV () true)
  (defun manage (ns guard) true))
(commit-tx)
(use test-mgd-ns)
(env-namespace-policy true (manage))

;; root install success

(module my-bad-root G
  (defcap G () true)
  (defun foo () 1))

;; root upgrade legacy failure

(env-namespace-policy false (manage))
(env-exec-config ['DisablePact44])

(module my-bad-root G
  (defcap G () true)
  (defun foo () 1))
